--- a/index-en.html
+++ b/index-en.html
@@ -310,7 +310,7 @@
 <body>
   <header>
     <h1>Lucas Franco</h1>
-    <h2>Estudante de Redes, CyberSecurity & Cloud</h2>
+    <h2>Computer Networks, CyberSecurity & Cloud Student</h2>
     <div class="language-switcher">
       <span>Change Language to:</span>
       <a href="index.html"><img src="img/brazil.png" alt="Brazilian Portuguese"></a>
@@ -331,28 +331,21 @@
           <div class="carousel" id="projectCarousel">
             <!-- Replique esse bloco para adicionar mais projetos -->
             <div class="carousel-item">
-              <img src="img/project/HPA.png" alt="Projeto 1">
-              <p>Hyundai HPA</p><br>
-              <span class="promo-box">EKS HPA</span>
+              <img src="img/project/dashboard e cenario.jpeg" alt="Projeto 1">
+              <p>Monitoring with Zabbix and grafana</p>
             </div>
             <div class="carousel-item">
-              <img src="img/project/MinikubeOfFrying.png" alt="Projeto 2">
-              <p>Minikube of Frying</p><br>
-              <span class="promo-box">Fully Minikube</span>
+              <img src="img/project/pfsense.png" alt="Projeto 2">
+              <p>Firewall with PFsense</p>
             </div>
             <div class="carousel-item">
-              <img src="img/project/BannerJamByOwn.png" alt="Projeto 3">
-              <p>AWS JamByOwn</p><br>
-              <span class="promo-box">AWS Challanges with Terraform</span>
+              <img src="img/project/EntregaFinalAWS1.jpg" alt="Projeto 3">
+              <p>Scalable Infrastructure on AWS</p><br>
+              
             </div>
             <div class="carousel-item">
-              <img src="img/project/CodeMagicCICD.png" alt="Projeto 4">
-              <p>CodeMagic Mobile CI/CD</p><br>
-              <span class="promo-box">Deploying mobile apps</span>
-            </div>
-            <div class="carousel-item">
-              <img src="img/project/embreve.png" alt="Projeto 5">
-              <p>Coming Soon</p>
+              <img src="img/project/facebook_phishing.png" alt="Projeto 4">
+              <p>Facebook Phishing</p>
             </div>
             <!-- Adicione mais blocos conforme necessário -->
           </div>
@@ -361,15 +354,15 @@
         </div>
       </section>
       <section id="Tools">
-        <h2>Experienced with</h2>
+        <h2>Experience with</h2>
         <div class="skills-grid">
           <div class="tooltip-container">
-            <img src="https://skillicons.dev/icons?i=jenkins" alt="Jenkins">
-            <div class="tooltip-text">Jenkins</div>
+            <img src="https://skillicons.dev/icons?i=arduino" alt="Arduino">
+            <div class="tooltip-text">Arduino</div>
           </div>
           <div class="tooltip-container">
-            <img src="https://skillicons.dev/icons?i=bitbucket" alt="Bitbucket">
-            <div class="tooltip-text">Bitbucket</div>
+            <img src="https://skillicons.dev/icons?i=nodejs" alt="Node">
+            <div class="tooltip-text">Node</div>
           </div>
           <div class="tooltip-container">
             <img src="https://skillicons.dev/icons?i=linux" alt="Linux">
@@ -400,24 +393,12 @@
             <div class="tooltip-text">Docker</div>
           </div>
           <div class="tooltip-container">
-            <img src="https://skillicons.dev/icons?i=terraform" alt="Terraform">
-            <div class="tooltip-text">Terraform</div>
-          </div>
-          <div class="tooltip-container">
-            <img src="https://skillicons.dev/icons?i=kubernetes" alt="Kubernetes">
-            <div class="tooltip-text">Kubernetes</div>
-          </div>
-          <div class="tooltip-container">
             <img src="https://skillicons.dev/icons?i=vscode" alt="VSCode">
             <div class="tooltip-text">VSCode</div>
           </div>
           <div class="tooltip-container">
             <img src="https://skillicons.dev/icons?i=windows" alt="Windows">
             <div class="tooltip-text">Windows</div>
-          </div>
-          <div class="tooltip-container">
-            <img src="https://skillicons.dev/icons?i=prometheus" alt="Prometheus">
-            <div class="tooltip-text">Prometheus</div>
           </div>
           <div class="tooltip-container">
             <img src="https://skillicons.dev/icons?i=grafana" alt="Grafana">
@@ -428,12 +409,12 @@
             <div class="tooltip-text">Git</div>
           </div>
           <div class="tooltip-container">
-            <img src="https://skillicons.dev/icons?i=nginx" alt="Nginx">
-            <div class="tooltip-text">Nginx</div>
+            <img src="https://skillicons.dev/icons?i=kali" alt="Kali Linux">
+            <div class="tooltip-text">Kali Linux</div>
           </div>
           <div class="tooltip-container">
-            <img src="https://skillicons.dev/icons?i=flask" alt="Flask">
-            <div class="tooltip-text">Flask</div>
+            <img src="https://skillicons.dev/icons?i=nginx" alt="Nginx">
+            <div class="tooltip-text">Nginx</div>
           </div>
           <div class="tooltip-container">
             <img src="https://skillicons.dev/icons?i=python" alt="Python">
@@ -444,29 +425,13 @@
             <div class="tooltip-text">Azure</div>
           </div>
           <div class="tooltip-container">
-            <img src="https://skillicons.dev/icons?i=ansible" alt="Ansible">
-            <div class="tooltip-text">Ansible</div>
-          </div>
-          <div class="tooltip-container">
             <img src="https://skillicons.dev/icons?i=postman" alt="Postman">
             <div class="tooltip-text">Postman</div>
           </div>
-          <div align="center">
-            <img src="https://img.shields.io/badge/Jira-0052CC?style=for-the-badge&logo=Jira&logoColor=whit" alt="Jira">
-            <img src="https://img.shields.io/badge/Slack-4A154B?style=for-the-badge&logo=slack&logoColor=white" alt="Slack">
-            <img src="https://img.shields.io/badge/Argo%20CD-1e0b3e?style=for-the-badge&logo=argo&logoColor=#d16044" alt="ArgoCD">
-            <img src="https://img.shields.io/badge/Vagrant-1868F2?style=for-the-badge&logo=Vagrant&logoColor=white" alt="Vangrant">
-            <img src="https://img.shields.io/badge/Google_Play-414141?style=for-the-badge&logo=google-play&logoColor=white" alt="Google Play Store">
-            <img src="https://img.shields.io/badge/Snyk-4C4A73?style=for-the-badge&logo=snyk&logoColor=white" alt="Snyk">
-            <img src="https://img.shields.io/badge/Oracle-F80000?style=for-the-badge&logo=oracle&logoColor=black" alt="Oracle Cloud">
-            <img src="https://img.shields.io/badge/Azure_DevOps-0078D7?style=for-the-badge&logo=azure-devops&logoColor=white" alt="Azure DevOps">
-            <img src="https://img.shields.io/badge/Sonarqube-5190cf?style=for-the-badge&logo=sonarqube&logoColor=white" alt="Sonarqube">
-          </div>
         </div>
-      </section>
       <section id="experience">
-        <h2>Resumo</h2>
-        <p>I have been working with DevOps and Cloud Computing for nearly three years, focusing on automation, Infrastructure as Code, and best practices in CI/CD, security, and observability. I was the national runner-up in the WorldSkills competition (Cloud AWS category), representing the state of São Paulo. I have delivered technical training for companies and trained professionals in DevOps, Cloud, and Monitoring. I led complex migrations to Google Cloud, implemented optimizations that resulted in cost savings of over R$30,000, and built complete pipelines using Terraform, Docker, Kubernetes, ArgoCD, Jenkins, and native CI/CD across AWS, GCP, and Azure. I hold certifications from AWS, Google Cloud, and GitOps.</p>
+        <h2>Resume</h2>
+        <p>I am currently a student of Computer Networks, Information Security, and Cloud Computing. I have hands-on experience with virtualized environments using VMware, cloud services (AWS and Azure), Linux server administration, and network infrastructure. I also develop projects focused on offensive and defensive security, environment automation, and Cloud solutions. I am constantly learning and improving to work professionally in the fields of CyberSecurity and Cloud Engineering.</p>
       </section>
       <!-- <section id="blog">
         <h2>Recommended by Me!</h2>
@@ -484,24 +449,24 @@
         <div class="project-container">
           
           <div class="project-item">
-            <img src="https://templates.images.credential.net/16590181582433100721069374350922.png" alt="Certificação AWS" width="150" height="150">
-            <p>Google Cloud Professional Cloud Architect</p>
+            <img src="https://images.credly.com/images/be8fcaeb-c769-4858-b567-ffaaa73ce8cf/image.png" alt="Certificação Azure" width="150" height="150">
+            <p>Microsoft Azure AZ-900</p>
           </div>
           <div class="project-item">
-            <img src="https://templates.images.credential.net/16590187933301617801540872729153.png" alt="Certificação GCP" width="150" height="150">
-            <p>Google Cloud Associate Cloud Engineer</p>
+            <img src="https://images.credly.com/images/fc1352af-87fa-4947-ba54-398a0e63322e/security-compliance-and-identity-fundamentals-600x600.png" alt="Certificação Azure" width="150" height="150">
+            <p>Microsoft Azure SC-900</p>
           </div>
           <div class="project-item">
-            <img src="https://images.credly.com/size/340x340/images/00634f82-b07f-4bbd-a6bb-53de397fc3a6/image.png" alt="Certificação Linux" width="150" height="150">
-            <p>AWS Cloud Practitioner</p>
+            <img src="https://images.credly.com/images/4136ced8-75d5-4afb-8677-40b6236e2672/azure-ai-fundamentals-600x600.png" alt="Certificação Azure" width="150" height="150">
+            <p>Microsoft Azure AI-900</p>
           </div>
           <div class="project-item">
-            <img src="https://images.credly.com/size/340x340/images/e7bf6727-22cf-45d6-ad9c-76ab57c3f11b/image.png" alt="Certificação GitOps" width="150" height="150">
-            <p>AWS Academy Verifed Educataor</p>
+            <img src="https://images.credly.com/images/2a6251f2-737b-4bf6-9190-d77570cc76fc/CERT-Fundamentals-Power-Platform.png" alt="Certificação Azure" width="150" height="150">
+            <p>Microsoft Azure PL-900</p>
           </div>
           <div class="project-item">
-            <img src="https://images.credly.com/images/6f4212c6-80e6-4819-833d-a652b0feaabb/blob" alt="Certificação GitOps" width="150" height="150">
-            <p>GitOps Certified</p>
+            <img src="https://images.credly.com/images/20082fc1-94af-4773-9df0-28856b566748/image.png" alt="Certificação Fortinet" width="150" height="150">
+            <p>Fortinet Associate Cybersecurity</p>
           </div>
         </div>
       </section>
